# claude-devops-tools

./: .gitignore  DAILY-PROJECT-SYSTEM.md  DAILY_INDEX_2026-05-29.md  DAILY_NOTIFICATION_2026-06-04.md  DAILY_NOTIFICATION_2026-06-06.md  DAILY_NOTIFICATION_2026-06-08.md  DAILY_NOTIFICATION_2026-06-09.md  DAILY_NOTIFICATION_2026-06-11.md  DAILY_NOTIFICATION_2026-06-12.md  DAILY_NOTIFICATION_2026-06-13.md  DAILY_NOTIFICATION_2026-06-14.md  DAILY_NOTIFICATION_2026-06-15.md  DAILY_NOTIFICATION_2026-06-17.md  DAILY_NOTIFICATION_2026-06-19.md  DAILY_NOTIFICATION_2026-06-20.md  DAILY_NOTIFICATION_2026-06-24.md  DAILY_NOTIFICATION_2026-06-27.md  DAILY_NOTIFICATION_2026-07-03.md  DAILY_NOTIFICATION_2026-07-07.md  DAILY_NOTIFICATION_2026-07-12.md  DAILY_NOTIFICATION_2026-07-13.md  DAILY_NOTIFICATION_2026-07-14.md  DAILY_NOTIFICATION_2026-07-21.md  DAILY_PROJECT_2026-05-28.md  DAILY_PROJECT_2026-05-29.md  DAILY_PROJECT_2026-06-11.md  DAILY_PROJECT_2026-06-24.md  DAILY_PROJECT_2026-06-25.md  DAILY_PROJECT_2026-06-27.md  DAILY_PROJECT_2026-07-05.md  DAILY_PROJECT_2026-07-07.md  DAILY_SUMMARY_2026-06-17.txt  GETTING-STARTED.md  GUIDE_JOUR_29.md  Makefile  NOTIFICATION_2026-05-29.txt  PROJECTS_INDEX.md  PROJECTS_INDEX_2026-06-14.md  PROJECTS_INDEX_2026-06-15.md  PROJECT_STATS_2026-05-29.txt  (+10 more)
.claude/: PROMPT_GUARD_README.md  maintain-prompt-guard.py  (+2 more)
projects/2026-06-11_github-actions-python-ci-cd/: .gitignore  .pylintrc  BEST_PRACTICES.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
projects/2026-06-11_github-actions-python-ci-cd/src/: __init__.py  cli.py
(+944 files in other folders)
